# templates

./: BoolString.cpp  CMakeLists.txt  Helper.cpp  IsPrime.cpp  README.md  Stack.cpp  decay.cpp  enable_if_t.cpp  forward_reference.cpp  is_convertible.cpp  print.cpp  ref_cref.cpp  stack_assign.cpp  template_variable.cpp  use_this.cpp  zero_init.cpp
