cmake_minimum_required(VERSION 3.5)
project(Templates)
set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

add_executable(print print.cpp)
add_executable(enable_if_t enable_if_t.cpp)
add_executable(zero_init zero_init.cpp)
add_executable(use_this use_this.cpp)
add_executable(stack_assign stack_assign.cpp)
add_executable(BoolString BoolString.cpp)
add_executable(template_variable template_variable.cpp)
add_executable(Stack Stack.cpp)